# amxx-nova-pc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt
.github/: release-drafter.yml
apps/amxxpc/: CMakeLists.txt
apps/amxxpc/src/: amx.cpp  amx.h  amxxpc.cpp  amxxpc.h  binary.cpp  binary.h  osdefs.h  version.h.in
apps/amxxpc/src/platform/windows/: amxxpc.exe.rc.in
cmake/: CompileOptionsLinuxGNU.cmake  SetupGitHooks.cmake
libs/amxxpc32/: CMakeLists.txt
libs/amxxpc32/src/: amx.h  amxdbg.h  dllmain.c  libpawnc.c  memfile.c  memfile.h  osdefs.h  pawncc.c  prefix.c  prefix.h  sc.h  sc1.c  sc2.c  sc3.c  sc4.c  sc5-in.scp  sc5.c  sc6.c  sc7-in.scp  sc7.c  sci18n.c  sclinux.h  sclist.c  scmemfil.c  scstate.c  scvars.c  sp_symhash.c  sp_symhash.h
tools/: pre-commit.sh
tools/linux/: build.sh  clang-format-20_linux-amd64.sha512
tools/windows/: build.ps1  clang-format-20_windows-amd64.sha512
